--- a/cmac-pipeline/extensions/pom.xml
+++ b/cmac-pipeline/extensions/pom.xml
@@ -56,6 +56,11 @@
       <version>${oodt.version}</version>
     </dependency>
     <dependency>
+      <groupId>esgf.org</groupId>
+      <artifactId>esg-search</artifactId>
+      <version>3.7.2</version>
+    </dependency>    
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.2</version>
