--- a/cmac-pipeline/filemgr/pom.xml
+++ b/cmac-pipeline/filemgr/pom.xml
@@ -63,6 +63,10 @@
       <version>3.8.2</version>
       <scope>test</scope>
     </dependency>
-
+	<dependency>
+		<groupId>log4j</groupId>
+		<artifactId>log4j</artifactId>
+		<version>1.2.14</version>
+	</dependency>
   </dependencies>
 </project>
