--- a/cmac-pipeline/extensions/pom.xml
+++ b/cmac-pipeline/extensions/pom.xml
@@ -85,6 +85,11 @@
       <version>1.1</version>
     </dependency>
     <dependency>
+		<groupId>commons-httpclient</groupId>
+		<artifactId>commons-httpclient</artifactId>
+		<version>3.1</version>
+	</dependency>
+    <dependency>
       <groupId>org.apache.oodt</groupId>
       <artifactId>cas-pge</artifactId>
       <!-- FIXME: replace with ${oodt.version} when latest is working -->
