--- a/cmac-pipeline/extensions/pom.xml
+++ b/cmac-pipeline/extensions/pom.xml
@@ -89,6 +89,16 @@
 		<artifactId>commons-httpclient</artifactId>
 		<version>3.1</version>
 	</dependency>
+	<dependency>
+		<groupId>commons-logging</groupId>
+		<artifactId>commons-logging</artifactId>
+		<version>1.0.3</version>
+	</dependency>
+	<dependency>
+		<groupId>log4j</groupId>
+		<artifactId>log4j</artifactId>
+		<version>1.2.14</version>
+	</dependency>	
     <dependency>
       <groupId>org.apache.oodt</groupId>
       <artifactId>cas-pge</artifactId>
