Working on product metadata.

--- a/cmac-pipeline/workflow/src/main/resources/etc/pge/GSFC/config/fileToDatasetResolver.properties
+++ b/cmac-pipeline/workflow/src/main/resources/etc/pge/GSFC/config/fileToDatasetResolver.properties
@@ -1,4 +1,4 @@
 # granule regex identifier=collection identifier|collection title|collection description
 .*=obs4MIPs.NASA-JPL.AIRS.mon.v1|esg-datanode.jpl.nasa.gov\
-||AIRS Dataset Title\
-||AIRS Dataset Description
+||AIRS Obs4MIPs Data\
+||AIRS Data prepared for ESGF
