Updating PO.DAAC workflow configuration and algorithm.

--- a/cmac-pipeline/workflow/src/main/resources/etc/pge/JPL/exec/obs4MIPs_ccmp.cfg
+++ b/cmac-pipeline/workflow/src/main/resources/etc/pge/JPL/exec/obs4MIPs_ccmp.cfg
@@ -1,8 +1,9 @@
 # dictionary of global attributes to be added to each file
 # section 'default' contains common attributes
 # section '<variable>' contains variable-specific attributes
+
 [default]
-contact=<PO.DAAC email contact>
+contact=PO.DAAC email contact
 Conventions=CF-1.6
 creation_date=$CREATION_DATE
 data_structure=grid
@@ -13,8 +14,8 @@ mip_specs=CMIP5
 product=observations
 project_id=obs4MIPs
 realm=ocean
-references=<PO.DAAC dataset URL>
-source=<SOURCE>
+references=PO.DAAC dataset URL
+source=SOURCE
 source_id=DMSP-F15/SSM/I 
 table_id=Table Amon_obs (10 March 2011) 5cb1da3266cbf624b68eb89f5a6d9ae2
 source_type=satellite_retrieval
@@ -23,7 +24,7 @@ comment=Generated from PO.DAAC CCMP data to conform to obs4MIPs specification
 title=CCMP: Cross-Calibrated Multi-Platform Ocean Surface Wind Vector L3.5 (monthly means, year: $YEAR)
 experiment_id=obs
 model_id=Obs-CCMP
-instrument=<INSTRUMENT>
+instrument=INSTRUMENT
 obs_project=CCMP
 processing_level=L3
 processing_version=v11l35flk
