Improving generation of PO.DAAC products

--- a/cmac-pipeline/workflow/src/main/resources/etc/pge/JPL/exec/obs4MIPs_ccmp.cfg
+++ b/cmac-pipeline/workflow/src/main/resources/etc/pge/JPL/exec/obs4MIPs_ccmp.cfg
@@ -3,31 +3,34 @@
 # section '<variable>' contains variable-specific attributes
 
 [default]
-contact=PO.DAAC email contact
+contact=Robert Atlas (robert.atlas@noaa.gov)
 Conventions=CF-1.6
 creation_date=$CREATION_DATE
 data_structure=grid
 frequency=mon
-institute_id=NASA-JPL
-institution=National Aeronautics and Space Administration, Jet Propulsion Laboratory
+institute_id=NASA-GSFC
+institution=National Aeronautics and Space Administration, Goddard Space Flight Center
 mip_specs=CMIP5
 product=observations
 project_id=obs4MIPs
-realm=ocean
-references=PO.DAAC dataset URL
-source=SOURCE
-source_id=DMSP-F15/SSM/I 
-table_id=Table Amon_obs (10 March 2011) 5cb1da3266cbf624b68eb89f5a6d9ae2
-source_type=satellite_retrieval
+realm=atmos
+modeling_realm=atmos
+references=http://opendap.jpl.nasa.gov/opendap/allData/ccmp/L3.5a/monthly/flk/
+source=CCMP L3.5a monthly wind vector analysis provided by Atlas et al. 2011 and distributed through the PO.DAAC
+source_id=CCMP 
+table_id=Table Amon_obs (10 March 2011) d16428a5cc568c89f792da40d4e48b1c
+source_type=assimilation
 tracking_id=$UUID
-comment=Generated from PO.DAAC CCMP data to conform to obs4MIPs specification
+#title=Obs-CCMP model output prepared for obs4MIPs NASA-JPL observation
 title=CCMP: Cross-Calibrated Multi-Platform Ocean Surface Wind Vector L3.5 (monthly means, year: $YEAR)
 experiment_id=obs
 model_id=Obs-CCMP
-instrument=INSTRUMENT
-obs_project=CCMP
-processing_level=L3
+instrument=Multi
+obs_project= MEaSUREs
+processing_level=L4
 processing_version=v11l35flk
+history=Re-sampling of CCMP wind fields for AR5 PCMDI comparisons 2013-03-10T08:34:58Z CMOR rewrote data to comply with CF standards and obs4MIPs requirements.
+
 
 [uwnd]
 description=u-wind at 10 meters
