Inserting latest version of PO.DAAC PGE

--- a/cmac-pipeline/workflow/src/main/resources/etc/pge/JPL/exec/obs4MIPs_ccmp.cfg
+++ b/cmac-pipeline/workflow/src/main/resources/etc/pge/JPL/exec/obs4MIPs_ccmp.cfg
@@ -1,51 +1,65 @@
-# dictionary of global attributes to be added to each file
-# section 'default' contains common attributes
-# section '<variable>' contains variable-specific attributes
+# dictionary of global and variable attributes to be added to each file
+# section 'default' contains common attributes for all files
+# section '<variable>' contains attributes for variable specific files
+# global attributes are encoded in NCO notation as: name,global=value
+# variable attributes are encoded in NCO notation as: name,variable_name=value
 
 [default]
-contact=Robert Atlas (robert.atlas@noaa.gov)
-Conventions=CF-1.6
-creation_date=$CREATION_DATE
-data_structure=grid
-frequency=mon
-institute_id=NASA-GSFC
-institution=National Aeronautics and Space Administration, Goddard Space Flight Center
-mip_specs=CMIP5
-product=observations
-project_id=obs4MIPs
-realm=atmos
-modeling_realm=atmos
-references=http://opendap.jpl.nasa.gov/opendap/allData/ccmp/L3.5a/monthly/flk/
-source=CCMP L3.5a monthly wind vector analysis provided by Atlas et al. 2011 and distributed through the PO.DAAC
-source_id=CCMP 
-table_id=Table Amon_obs (10 March 2011) d16428a5cc568c89f792da40d4e48b1c
-source_type=assimilation
-tracking_id=$UUID
-#title=Obs-CCMP model output prepared for obs4MIPs NASA-JPL observation
-title=CCMP: Cross-Calibrated Multi-Platform Ocean Surface Wind Vector L3.5 (monthly means, year: $YEAR)
-experiment_id=obs
-model_id=Obs-CCMP
-instrument=Multi
-obs_project= MEaSUREs
-processing_level=L4
-processing_version=v11l35flk
-history=Re-sampling of CCMP wind fields for AR5 PCMDI comparisons 2013-03-10T08:34:58Z CMOR rewrote data to comply with CF standards and obs4MIPs requirements.
+contact,global=Robert Atlas (robert.atlas@noaa.gov)
+Conventions,global=CF-1.6
+creation_date,global=$CREATION_DATE
+data_structure,global=grid
+frequency,global=mon
+institute_id,global=NASA-GSFC
+institution,global=National Aeronautics and Space Administration, Goddard Space Flight Center
+mip_specs,global=CMIP5
+product,global=observations
+project_id,global=obs4MIPs
+realm,global=atmos
+modeling_realm,global=atmos
+references,global=http://opendap.jpl.nasa.gov/opendap/allData/ccmp/L3.5a/monthly/flk/
+source,global=CCMP L3.5a monthly wind vector analysis provided by Atlas et al. 2011 and distributed through the PO.DAAC
+source_id,global=CCMP 
+table_id,global=Table Amon_obs (10 March 2011) d16428a5cc568c89f792da40d4e48b1c
+source_type,global=assimilation
+tracking_id,global=$UUID
+#title,global=Obs-CCMP model output prepared for obs4MIPs NASA-JPL observation
+title,global=CCMP: Cross-Calibrated Multi-Platform Ocean Surface Wind Vector L3.5 (monthly means, year: $YEAR)
+experiment_id,global=obs
+model_id,global=Obs-CCMP
+instrument,global=Multi
+obs_project,global= MEaSUREs
+processing_level,global=L4
+processing_version,global=v11l35flk
+history,global=Re-sampling of CCMP wind fields for AR5 PCMDI comparisons 2013-03-10T08:34:58Z CMOR rewrote data to comply with CF standards and obs4MIPs requirements.
+axis,time=T
+standard_name,time=time
+long_name,time=time
+calendar,time=standard
+axis,lat=Y
+long_name,lat=latitude
+standard_name,lat=latitude
+axis,lon=X
+long_name,lon=longitude
+standard_name,lon=longitude
 
+[uas]
+description,global=u-wind at 10 meters
+long_name,uas=Eastward Near-Surface Wind
+standard_name,uas=eastward_wind
 
-[uwnd]
-description=u-wind at 10 meters
+[vas]
+description,global=v-wind at 10 meters
+long_name,vas=Northward Near-Surface Wind
+standard_name,vas=northward_wind
 
-[vwnd]
-description=v-wind at 10 meters
-
-[wspd]
-description=wind speed at 10 meters
-
-[upstr]
-description=u-component of pseudostress at 10 meters
-
-[vpstr]
-description=v-component of pseudostress at 10 meters
+[sfcWind]
+description,global=wind speed at 10 meters
+long_name,sfcWind=Near-Surface Wind Speed
+standard_name,sfcWind=wind_speed
 
 [nobs]
-description=number of observations
+description,global=wind number of observations
+long_name,nobs=Number of observations
+standard_name,nobs=number_of_observations
+units,nobs=1
