Improving PODAAC PGE.

--- a/cmac-pipeline/workflow/src/main/resources/etc/pge/JPL/exec/obs4MIPs_ccmp.cfg
+++ b/cmac-pipeline/workflow/src/main/resources/etc/pge/JPL/exec/obs4MIPs_ccmp.cfg
@@ -24,7 +24,6 @@ table_id,global=Table Amon_obs (10 March 2011) d16428a5cc568c89f792da40d4e48b1c
 source_type,global=assimilation
 tracking_id,global=$UUID
 #title,global=Obs-CCMP model output prepared for obs4MIPs NASA-JPL observation
-title,global=CCMP: Cross-Calibrated Multi-Platform Ocean Surface Wind Vector L3.5 (monthly means, year: $YEAR)
 experiment_id,global=obs
 model_id,global=Obs-CCMP
 instrument,global=Multi
@@ -44,22 +43,26 @@ long_name,lon=longitude
 standard_name,lon=longitude
 
 [uas]
+title,global=CCMP: Cross-Calibrated Multi-Platform Ocean Eastward Near-Surface Wind (L3.5, uas, monthly means, year: $YEAR)
 description,global=u-wind at 10 meters
 long_name,uas=Eastward Near-Surface Wind
 standard_name,uas=eastward_wind
 
 [vas]
+title,global=CCMP: Cross-Calibrated Multi-Platform Ocean Northward Near-Surface Wind (L3.5, vas, monthly means, year: $YEAR)
 description,global=v-wind at 10 meters
 long_name,vas=Northward Near-Surface Wind
 standard_name,vas=northward_wind
 
 [sfcWind]
+title,global=CCMP: Cross-Calibrated Multi-Platform Ocean Near-Surface Wind Speed (L3.5, sfcWind, monthly means, year: $YEAR)
 description,global=wind speed at 10 meters
 long_name,sfcWind=Near-Surface Wind Speed
 standard_name,sfcWind=wind_speed
 
 [nobs]
+title,global=CCMP: Cross-Calibrated Multi-Platform Ocean Wind Number of Observations (L3.5, nobs, monthly means, year: $YEAR)
 description,global=wind number of observations
-long_name,nobs=Number of observations
+long_name,nobs=Number of Observations
 standard_name,nobs=number_of_observations
 units,nobs=1
