Changing case to 'Obs4MIPs'

--- a/cmac-pipeline/workflow/src/main/resources/etc/pge/JPL/exec/obs4MIPs_ccmp.cfg
+++ b/cmac-pipeline/workflow/src/main/resources/etc/pge/JPL/exec/obs4MIPs_ccmp.cfg
@@ -14,7 +14,7 @@ institute_id,global=NASA-GSFC
 institution,global=National Aeronautics and Space Administration, Goddard Space Flight Center
 mip_specs,global=CMIP5
 product,global=observations
-project_id,global=obs4MIPs
+project_id,global=Obs4MIPs
 realm,global=atmos
 modeling_realm,global=atmos
 references,global=http://opendap.jpl.nasa.gov/opendap/allData/ccmp/L3.5a/monthly/flk/
